# derive-getters

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: 01-legacy.rs  02-simple-single-generic.rs  03-simple-multi-generic.rs  04-simple-lifetime-annot.rs  05-skip-rename-attributes.rs  06-plays-with-others.rs  lib.rs
